# ptlink-services3

./: CHANGES  CONFIG  DEVNOTES  FAQ  INDEX  INSTALL  Makefile.in  PTlink-team  README  ToDo  configure  shtool
ChangeLog/: 3.0.x  3.1.x  3.2.x  3.3.x  3.4.x  3.5.x  3.6.x  3.7.x  3.8.x
autoconf/: aclocal.m4  configure.in  install-sh
docs/: Architecture.sxd  GenericModuleSpecification.sxw  Importing_dconf.txt  MajorChanges.txt  Modules.txt  NickGroups.sxw  Roadmap.sxw  UpgradeFromServices2.txt  Upgrades.txt  cl_new_chan_option.txt  dbmem.txt  guidelines.txt  os_uevent.txt
etc/: Makefile.in  ircsvs.conf  ircsvs.modules
etc/mails/: setemail.en_us  setemail.nl  setemail.pt  welcome.de  welcome.en_us  welcome.nl  welcome.pt  welcome.pt_br
include/: array.h  chanrecord.h  encrypt.h  ircsvs.h  lang.h  log.h  modevents.h  module.h  modules.h  my_sql.h  patchlevel.h  s_log.h  serno.h  setup.h.in  sqlb.h  stdinc.h  strhand.h  suser.h
libircservice/: CHANGES  Doxyfile  INSTALL  Makefile.in  configure
libircservice/autoconf/: configure.in  install-sh
libircservice/docs/: event_list.txt
libircservice/include/: channel.h  common.h  dlink.h  event.h  hash.h  irc_parse.h  irc_string.h  ircdio.h  ircservice.h  m_commands.h  patchlevel.h  raw.h  send.h  setup.h.in  sockutil.h  stdinc.h  timer.h  umode.h  user.h
libircservice/samples/: Makefile.in  changuard.c  fortune.c  fortune.txt  infoserv.c  listchans.c  listnicks.c  setup.h  tldstats.c  watchdog.c
libircservice/src/: Makefile.in  channel.c  cmode.c  dlink.c  event.c  hash.c  initconn.c  irc_parse.c  ircdio.c  m_commands.sh  match.c  raw.c  send.c  server.c  sockutil.c  timer.c  umode.c  user.c
modules/: Makefile.in  botserv.c  bs_assign.c  bs_chan.c  bs_create.c  bs_drop.c  bs_help.c  bs_info.c  bs_list.c  chanserv.c  chanserv.h  compile.sh  compile.sh.in  cs_ajoin.c  cs_akick.c  cs_clear.c  cs_drop.c  cs_help.c  cs_hopdehop.c  cs_info.c  cs_invite.c  cs_kick.c  cs_lastreg.c  cs_list.c  cs_opdeop.c  cs_register.c  cs_role.c  cs_role.h  cs_set.c  cs_show.c  cs_suspend.c  cs_unban.c  cs_voicedevoice.c  dbconf.c  dbconf.h  email.c  email.c~  email.h  event_list.txt  expire.c  (+52 more)
modules/etc/: Makefile.in  botserv.modules  chanserv.modules  memoserv.modules  nickserv.modules  operserv.modules
modules/lang/: CHANGES  README  bs_assign.l  bs_create.l  bs_drop.l  bs_info.l  bs_list.l  chanserv.l  common.l  cs_ajoin.l  cs_akick.l  cs_clear.l  cs_drop.l  cs_hopdehop.l  cs_info.l  cs_invite.l  cs_kick.l  cs_lastreg.l  cs_list.l  cs_opdeop.l  cs_register.l  cs_role.l  cs_set.l  cs_show.l  cs_suspend.l  cs_unban.l  cs_voicedevoice.l  cscommon.l  help.l  langcheck.sh  memoserv.l  ms_cancel.l  ms_del.l  ms_info.l  ms_list.l  ms_read.l  ms_save.l  ms_send.l  ms_set.l  nickserv.l  (+29 more)
modules/sql/: Makefile.in  botserv.sql  bs_chan.sql  bs_set.sql  chanserv.2.sql  chanserv.3.sql  chanserv.4.sql  chanserv.sql  cs_ajoin.2.sql  cs_ajoin.sql  cs_akick.2.sql  cs_akick.sql  cs_role.2.sql  cs_role.3.sql  cs_role.sql  dbconf.sql  memoserv.2.sql  memoserv.3.sql  memoserv.4.sql  memoserv.sql  mysql.sql  nickserv.2.sql  nickserv.3.sql  nickserv.4.sql  nickserv.5.sql  nickserv.6.sql  nickserv.7.sql  nickserv.8.sql  nickserv.9.sql  nickserv.sql  ns_blist.sql  ns_group.2.sql  ns_group.3.sql  ns_group.sql  ns_last.sql  ns_photo.2.sql  ns_photo.sql  os_quote.sql  os_sline.2.sql  os_sline.sql  (+4 more)
src/: Makefile.in  array.c  chanrecord.c  encrypt.c  ircsvs.c  l2lh.c  lang.c  log.c  match.c  modevents.c  modules.c  mysql.c  s_log.c  sqlb.c  strhand.c  suser.c
utils/: Makefile  Makefile.in  cron_check.sh  expire_email.sh  import_dconf.sh  mysql_backup.sh  news_email.sh  svsquery.sh
utils/mails/: Expiring  Expiring.pt
utils/sql/: clear_db.sql  expire_emails.sql  news_emails.sql
utils/tbot/: botserv.exp  btest.exp  login.exp
www/: INSTALL  chans_list.php  gallery.php  get_photo.php  index.php  last_reg_channels.php  last_reg_users.php  stats.php  top_main.php  toplinks.php  user_login_action.php  user_logout.php  view_photo.php
www/classes/: user.class.php
www/includes/: ads.php  db.php  footer.php  lang.php  ns_flags.inc.php  panachart.php  sample-config.inc.php  session.inc.php  sqlb.php  utils.inc.php
www/js/: login_validation.js
www/langs/: en_us.php  nl.php  pt.php
www/register/: auth.php  index.php  regcode.php  register.php
www/stats/: nicks_total_last_month.php
www/stylesheet/: styles.css
www/user/: delete_photo.php  index.php  insert_photo.php  top.php  upload_photo.php
www/user/memos/: cancel.php  delete.php  list.php  mark_read.php
